@@ -2,6 +2,9 @@
 Updated:
 - Updated manpage
 - Convert examples, repositories and install text files to markdown format
+- Merge sbo/remove.py in the slpkg/remove.py file
+Fixed:
+- Bugfix: update slpkg itself from gitlab repository
 
 3.3.9 - 14/01/2019
 Updated:
